@@ -10,6 +10,7 @@
 
 
 Version 4.1.6
+ - Added: [ 2145398 ] [ 2148349 ] Admin Config Page Link to Lightbox configuration (windmillway)
  - Fixed: [ 1985973 ] ASSO tag GUI doesn't work (fisharebest)
  - Fixed: [ 1876508 ] gender icon distorted (fisharebest)
  - Fixed: [ 2145398 ] Incorrect call to lb_config.php in mediaviewer.php (ref line below). (windmillway)
